CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (pebble-mock) 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
#ENABLE_TESTING()

FIND_PACKAGE(Boost REQUIRED)

#SET(GTEST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/gtest-1.7.0")
#SET(GTEST_INCLUDE_DIR "${GTEST_ROOT}/include")
#ADD_SUBDIRECTORY(${GTEST_ROOT} "${CMAKE_CURRENT_BINARY_DIR}/gtest")
#INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})

SET(PEBBLE_FLAVOUR basalt)
EXECUTE_PROCESS(COMMAND pebble sdk include-path ${PEBBLE_FLAVOUR} OUTPUT_VARIABLE PEBBLE_INCLUDE_DIR)
IF(NOT "${PEBBLE_INCLUDE_DIR}")
    SET(PEBBLE_INCLUDE_DIR, "/Users/janmachacek/Library/Application Support/Pebble SDK/SDKs/3.10.1/sdk-core/pebble/${PEBBLE_FLAVOUR}/include")
ENDIF()
MESSAGE("${PEBBLE_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${PEBBLE_INCLUDE_DIR}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
