CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (pebble-mock) 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

FIND_PACKAGE(Boost REQUIRED)

SET(PEBBLE_FLAVOUR basalt)
EXECUTE_PROCESS(COMMAND pebble sdk include-path ${PEBBLE_FLAVOUR} OUTPUT_VARIABLE PEBBLE_INCLUDE_DIR)
IF(NOT "${PEBBLE_INCLUDE_DIR}")
    SET(PEBBLE_INCLUDE_DIR, "/Users/janmachacek/Library/Application Support/Pebble SDK/SDKs/3.10.1/sdk-core/pebble/${PEBBLE_FLAVOUR}/include")
ENDIF()
MESSAGE("${PEBBLE_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${PEBBLE_INCLUDE_DIR}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/includex)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
